--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,15 +3,10 @@
   "compilerOptions": {
     "module": "esnext",
     "target": "es5",
-    "lib": [
-      "dom",
-      "es2019"
-    ],
+    "lib": ["dom", "es2019"],
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "noEmit": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
