--- a/rules/tsconfig.json
+++ b/rules/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "lib": [
-      "es2019"
-    ],
+    "lib": ["es2019"],
     "declaration": true,
     "outDir": "dist",
     "rootDir": "src"
