--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "npmClient": "yarn",
-  "version": "0.1.2",
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json"
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "version": "0.0.0",
+  "npmClient": "yarn"
 }
