--- a/rules/package.json
+++ b/rules/package.json
@@ -2,6 +2,7 @@
   "name": "@gamepark/presages",
   "version": "1.0.1",
   "description": "The rules of Présages adapted for Game Park",
+  "type": "module",
   "sideEffects": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
